# scope-pose-preprocessor

./: .gitignore  README.md  pyproject.toml
pose_skeleton_plugin/: __init__.py  plugin.py
pose_skeleton_plugin/pipelines/: __init__.py  pose_estimator_mediapipe.py  pose_skeleton_pipeline.py  pose_skeleton_renderer.py  pose_skeleton_schema.py
tests/: conftest.py  test_pose_skeleton_pipeline.py  test_pose_skeleton_renderer.py
