[project]
name = "scope-plugin-pose-skeleton"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pydantic",
  "torch",
  # Heavy native deps are optional for local test runs; Scope (Py<3.14) will install them.
  "mediapipe; python_version < '3.14'",
  "opencv-python-headless; python_version < '3.14'",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."scope"]
pose_skeleton_plugin = "pose_skeleton_plugin.plugin"

[tool.hatch.build.targets.wheel]
packages = ["pose_skeleton_plugin"]

[tool.hatch.build.targets.wheel.force-include]
"pose_skeleton_plugin/models/pose_landmarker.task" = "pose_skeleton_plugin/models/pose_landmarker.task"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

